--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,2 +1,14 @@
-@import '../node_modules/water.css/out/dark.css'
+@import '../node_modules/water.css/out/dark.css';
 
+hr {
+    background-color: rgba(255, 255, 255, 0.25);
+}
+
+.project-card {
+    outline: 1px solid rgba(255, 255, 255, 0.25);
+    padding-top: 5px; 
+    padding-bottom: 5px;
+    padding-left: 5px; 
+    padding-right: 5px;
+    margin-bottom: 10px;
+}
