--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,11 +4,18 @@ hr {
     background-color: rgba(255, 255, 255, 0.25);
 }
 
-nav {
+.site-header {
+    margin-bottom: 15px;
+}
+
+.main-navbar {
     outline: 1px solid rgba(255, 255, 255, 0.25);
     padding-top: 5px;
     padding-bottom: 5px;
     border-radius: 5px;
+    display: flex;
+    flex-direction: row; 
+    justify-content: center;
 }
 
 .project-card {
@@ -19,4 +26,18 @@ nav {
     padding-left: 5px; 
     padding-right: 5px;
     margin-bottom: 10px;
+}
+
+.page-title-subtitle-container p {
+    display: flex;
+    justify-content: center;
+}
+
+.blog-ul {
+    list-style-type: '=> '
+}
+
+.blog-datebar {
+    text-decoration: underline;
+    margin-top: 15px;
 }
