--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,11 @@ hr {
     background-color: rgba(255, 255, 255, 0.25);
 }
 
+.hr-with-margin {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
 .site-header {
     margin-bottom: 15px;
 }
@@ -40,4 +45,19 @@ hr {
 .blog-datebar {
     text-decoration: underline;
     margin-top: 15px;
+}
+
+.spotify-section {
+    padding-top: 5px;
+    padding-bottom: 25px;
+}
+
+.spotify-weekly-title {
+    width: 300px;
+}
+
+.spotify-weekly-container {
+    display: flex;
+    justify-content: right;
+    margin-top: -60px;
 }
