--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,9 @@
 @import '../node_modules/water.css/out/dark.css';
 
+/* * {
+    outline: 1px solid red;
+} */
+
 hr {
     background-color: rgba(255, 255, 255, 0.25);
 }
@@ -59,5 +63,5 @@ hr {
 .spotify-weekly-container {
     display: flex;
     justify-content: right;
-    margin-top: -60px;
+    margin-top: -85px;
 }
