--- a/styles/globals.css
+++ b/styles/globals.css
@@ -151,3 +151,23 @@ nav ul li a:hover {
     margin-left: 20px;
     list-style-type: " - ";
 }
+
+@media only screen and (max-width: 800px) {
+    body {
+        width: 100%;
+    }
+
+    .profile-image { 
+        width: 100px;
+        height: 100px;
+        outline: 3px solid #dfd4c7;
+        border-radius: 75px; 
+        margin-top: 150px;
+        -webkit-box-shadow: 5px 5px 5px -1px rgba(0,0,0,0.3); 
+        box-shadow: 5px 5px 5px -1px rgba(0,0,0,0.3);
+    }
+
+    .current-page-text { 
+        white-space: pre;
+    }
+}
